# pcodec

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md
.cargo/: config_for_publishing.toml
.github/workflows/: java.yml  java_publish.yml  python_publish.yml  rust.yml
better_io/: Cargo.toml
docs/: CONTRIBUTING.md  conf.py  ffi_versions.md  format.md
docs/benchmark_results/: mbp_m3_max_rust1_82.csv
dtype_dispatch/: Cargo.toml
dtype_dispatch/src/: lib.rs
pco/: Cargo.toml  README.md  build.rs
pco/src/: bin_optimization.rs  latent_batch_dissector.rs  latent_page_decompressor.rs
pco/src/data_types/: floats.rs  signeds.rs  unsigneds.rs
pco/src/metadata/: mode.rs  page.rs  per_latent_var.rs
pco/src/standalone/: decompressor.rs  simple.rs
pco/src/tests/: mod.rs  stack_sizes.rs
pco/src/wrapped/: chunk_compressor.rs  chunk_decompressor.rs  page_decompressor.rs
pco_cli/: Cargo.toml
pco_cli/src/: chunk_config_opt.rs  dtypes.rs  num_vec.rs  utils.rs
pco_cli/src/bench/: handler.rs  mod.rs
pco_cli/src/bench/codecs/: mod.rs  vortex.rs
pco_cli/src/input/: mod.rs
pco_java/: README.md  pom.xml
pco_java/src/main/java/io/github/pcodec/: ChunkConfig.java  NumArray.java  NumberType.java  Standalone.java
pco_java/src/main/rust/: Cargo.toml
pco_java/src/main/rust/src/: config.rs  lib.rs  num_array.rs  result.rs  traits.rs
pco_java/src/test/java/io/github/pcodec/: StandaloneTest.java
pco_python/: Cargo.toml  README.md  pyproject.toml
pco_python/docs/: conf.py  index.rst  standalone.rst  wrapped.rst
pco_python/src/: config.rs  lib.rs  standalone.rs  utils.rs
pco_python/src/wrapped/: compressor.rs  decompressor.rs
pco_python/test/: test_standalone.py
