[package]
name = "pco_cli"
version = "0.4.3"
edition = "2021"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding", "command-line-utilities"]
description = "compresses, inspects, and decompresses pco data"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["compression", "numerical", "delta"]
license = "Apache-2.0"
repository = "https://github.com/pcodec/pcodec"

[[bin]]
name = "pcodec"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
arrow = { version = "54.3.1", features = ["csv"], default-features = false }
better_io = { version = "0.1.0", path = "../better_io" }
blosc2-src = { version = "0.1.3", features = ["zstd"], optional = true }
brotli = { version = "7.0.0", optional = true }
bytes = "1.4.0"
clap = { version = "4.5.3", features = ["derive"] }
half = { version = "2.1.0", features = ["std"] }
indicatif = "0.17.8"
once_cell = { version = "1.21.3", optional = true }
parquet = { version = "54.3.1", features = [
  "arrow",
  "base64",
  "snap",
  "zstd",
], default-features = false }
pco = { version = "0.4", path = "../pco" }
q_compress = { version = "0.11.7", path = "../quantile-compression/q_compress", optional = true }
rayon = { version = "1.10.0", optional = true }
snap = "1.1.0"
spdp_sys = { version = "0.1", optional = true }
toml = "0.8.12"
tabled = "0.18.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"], optional = true }
turbo_pfor_sys = { version = "0.1.3", optional = true }
vortex = { version = "0.28.0", features = ["files"], optional = true }
wav = { version = "1.0.0", optional = true }
zstd = "0.13"

[features]
audio = ["wav"]
full_bench = ["blosc2-src", "brotli", "once_cell", "q_compress", "rayon", "spdp_sys", "tokio", "turbo_pfor_sys", "vortex"]
